--- a/about.css
+++ b/about.css
@@ -18,7 +18,22 @@ body {
   box-sizing: border-box;
 }
 
+.article-title-section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .article-title-section h2 {
   color: white;
+  margin: 20px;
   font-family: "Montserrat", sans-serif;
+  font-size: xx-large;
+}
+
+hr{
+  color: aliceblue;
+  height: 2px;
+  width: 80%;
 }
