--- a/about.css
+++ b/about.css
@@ -31,6 +31,7 @@ body {
   margin: 20px;
   font-family: "Montserrat", sans-serif;
   font-size: xx-large;
+  text-align: center;
 }
 
 /* hr{
@@ -121,10 +122,18 @@ hr {
   transform: translateY(0);
 }
 
-@media (max-width: 640px) {
+@media (max-width: 1024px) {
+  body{
+    overflow:scroll;
+  }
   .article-title-section{
     flex-direction: column;
     margin: 5px;
+    height: auto;
+  }
+
+  .article-title-section h2 {
+    font-size: x-large;
   }
 
   .about-body{
@@ -143,4 +152,110 @@ hr {
     width: 80%;
     font-size: medium;
   }
+
+  .button-28 {
+    height: auto;
+    width: 80%;
+    margin-bottom: 30px;
+    appearance: none;
+    background-color: white;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: rgb(45, 43, 41);
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: medium;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 30px;
+    min-height: 42px;
+    min-width: 0;
+    outline: none;
+    padding: 0px 0px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+  }
+
+  .button-28:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: white 0 2px 5px;
+    transform: translateY(-6px);
+  }
 }
+
+/* @media (max-width: 1024px) {
+  body{
+    overflow:scroll;
+  }
+  .article-title-section{
+    flex-direction: column;
+    margin: 5px;
+    height: auto;
+  }
+
+  .article-title-section h2 {
+    font-size: x-large;
+  }
+
+  .about-body{
+    margin: 5px;
+    padding: 5px;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .img{
+    height: 290px;
+    width: 290px;
+  }
+
+  .about-section-text{
+    width: 80%;
+    font-size: medium;
+  }
+
+  .button-28 {
+    height: auto;
+    width: 80%;
+    margin-bottom: 30px;
+    appearance: none;
+    background-color: white;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: rgb(45, 43, 41);
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: medium;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 30px;
+    min-height: 42px;
+    min-width: 0;
+    outline: none;
+    padding: 0px 0px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+  }
+
+  .button-28:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: white 0 2px 5px;
+    transform: translateY(-6px);
+  }
+} */
