--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,12 @@ span {
 
 a {
   text-decoration: none;
+  font-size: x-large;
 }
 
 a:hover {
   color: var(--highlight-color);
+  font-size: x-large;
 }
 
 nav {
@@ -274,6 +276,7 @@ main > article > .article-nav-section > .article-nav-button:nth-child(2) {
 }
 
 @media (max-width: 1200px) {
+
   #nav-mobile-section {
     flex-basis: calc(100% * 0.75);
   }
