--- a/about.css
+++ b/about.css
@@ -51,7 +51,7 @@ hr {
   align-items: center;
   margin: 20px;
   padding: 20px;
-  height: 100%;
+  height: 85%;
 }
 
 .img{
@@ -72,6 +72,12 @@ hr {
   font-size: x-large;
   font-family: 'Rubik',sans-serif;
   /* font-family: "Font Awesome 6 Free"; */
+}
+
+.button-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button-28 {
