--- a/fourth.css
+++ b/fourth.css
@@ -205,7 +205,7 @@
   main > article:first-child > .article-image-section {
     /* background-image: url("https://images.unsplash.com/photo-1565626424178-c699f6601afd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"); */
     /* background-image: url("images/piyush1.png"); */
-    background-image: url("images/Untitled design.png");
+    background-image: url("https://images.unsplash.com/photo-1660766877755-4cac24f6cf21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2232&q=80");
   }
   
   main > article:nth-child(2) > .article-image-section {
