--- a/second.css
+++ b/second.css
@@ -68,6 +68,42 @@ nav .nav-section {
   margin: auto;
 }
 
+/* Preloader */
+.preloader{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+#preloader-heading{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#preloader-heading > div{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.preloader-disappear{
+  animation: vanish 5s forwards;
+}
+@keyframes vanish {
+  100%{
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+/* Preloader */
+
 #nav-mobile-section {
   display: flex;
   flex-basis: calc(100% * (2 / 3));
