--- a/third.css
+++ b/third.css
@@ -68,6 +68,14 @@
     margin: auto;
   }
   
+  .a-class{
+    font-size: xxx-large;
+  }
+
+  .a-class:hover{
+    font-size: xxx-large;
+  }
+
   #nav-mobile-section {
     display: flex;
     flex-basis: calc(100% * (2 / 3));
