--- a/third.css
+++ b/third.css
@@ -220,7 +220,7 @@ main>article>.article-nav-section {
 main>article:first-child>.article-image-section {
   /* background-image: url("https://images.unsplash.com/photo-1565626424178-c699f6601afd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80"); */
   /* background-image: url("images/piyush1.png"); */
-  background-image: url("images/Monson_final1.png");
+  background-image: url("images/Monson_Reji_Verghese.png");
 }
 
 main>article:nth-child(2)>.article-image-section {
