--- a/second.css
+++ b/second.css
@@ -263,7 +263,7 @@ main > article:nth-child(3) > .article-image-section {
 }
 
 main > article:nth-child(4) > .article-image-section {
-  background-image: url("https://images.unsplash.com/photo-1660766877755-4cac24f6cf21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2232&q=80");
+  background-image: url("images/soham_kotgire.png");
 }
 main > article:nth-child(5) > .article-image-section {
   background-image: url("https://images.unsplash.com/photo-1660766877755-4cac24f6cf21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2232&q=80");
